--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-loader": "0.11.1",
     "font-awesome": "4.7.0",
     "font-awesome-webpack-sass": "0.0.3",
+    "html-loader": "0.4.5",
     "jquery": "3.2.1",
     "knockout": "3.4.2",
     "less": "2.7.2",
