--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "font-awesome": "4.7.0",
     "font-awesome-webpack-sass": "0.0.3",
     "html-loader": "0.4.5",
+    "imports-loader": "0.7.1",
     "jquery": "3.2.1",
     "knockout": "3.4.2",
     "less": "2.7.2",
