--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-sass": "4.5.2",
     "resolve-url-loader": "2.0.2",
     "sass-loader": "6.0.3",
+    "source-map-loader": "0.2.1",
     "style-loader": "0.16.1",
     "url-loader": "0.5.8",
     "webpack": "2.3.2"
