--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "shizkun",
   "license": "CC0-1.0",
   "devDependencies": {
+    "adm-zip": "0.4.7",
     "babel-core": "6.24.0",
     "babel-loader": "6.4.1",
     "babel-preset-env": "1.3.2",
@@ -41,8 +42,11 @@
     "webpack": "2.3.2"
   },
   "dependencies": {
+    "bluebird": "3.5.0",
     "lodash": "^4.17.4",
+    "output-file": "1.1.1",
     "recursive-readdir": "^2.1.1",
-    "roboto-fontface": "0.7.0"
+    "roboto-fontface": "0.7.0",
+    "threads": "0.7.2"
   }
 }
