--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "baiji-manga-viewer",
     "version": "1.0.0",
     "description": "A modern manga viewer inspired by Quivi.",
-    "main": "main.js",
     "scripts": {
-        "start": "electron .",
-        "build": "webpack --config webpack.config.js --watch"
+        "start": "electron ./src/",
+        "build-renderer": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.js  --progress --profile --colors --watch",
+        "build-main": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.main.prod.js  --progress --profile --colors"
     },
     "repository": "https://github.com/shizkun/manga-viewer",
     "keywords": [
@@ -19,7 +19,11 @@
         "adm-zip": "0.4.7",
         "babel-core": "6.24.0",
         "babel-loader": "6.4.1",
+        "babel-plugin-add-module-exports": "0.2.1",
+        "babel-plugin-dynamic-import-webpack": "1.0.1",
         "babel-preset-env": "1.3.2",
+        "babel-preset-stage-0": "6.24.1",
+        "babel-register": "6.24.1",
         "css-loader": "0.28.0",
         "electron": "1.6.7",
         "electron-rebuild": "1.5.7",
@@ -38,7 +42,8 @@
         "source-map-loader": "0.2.1",
         "style-loader": "0.16.1",
         "url-loader": "0.5.8",
-        "webpack": "2.3.2"
+        "webpack": "2.3.2",
+        "webpack-target-electron-renderer": "0.4.0"
     },
     "dependencies": {
         "bluebird": "3.5.0",
