--- a/package.json
+++ b/package.json
@@ -1,59 +1,54 @@
 {
-    "name": "baiji-manga-viewer",
-    "version": "1.0.0",
-    "description": "A modern manga viewer inspired by Quivi.",
-    "scripts": {
-        "start": "electron ./src/",
-        "build-renderer": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.js  --progress --profile --colors --watch",
-        "build-main": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.main.prod.js  --progress --profile --colors"
-    },
-    "repository": "https://github.com/shizkun/manga-viewer",
-    "keywords": [
-        "Manga Viewer",
-        "quick",
-        "Baiji"
-    ],
-    "author": "shizkun",
-    "license": "CC0-1.0",
-    "devDependencies": {
-        "adm-zip": "0.4.7",
-        "babel-core": "6.24.0",
-        "babel-loader": "6.4.1",
-        "babel-plugin-add-module-exports": "0.2.1",
-        "babel-plugin-dynamic-import-webpack": "1.0.1",
-        "babel-preset-env": "1.3.2",
-        "babel-preset-stage-0": "6.24.1",
-        "babel-register": "6.24.1",
-        "css-loader": "0.28.0",
-        "electron": "1.6.7",
-        "electron-rebuild": "1.5.7",
-        "extract-zip": "=1.6.0",
-        "file-loader": "0.11.1",
-        "html-loader": "0.4.5",
-        "imports-loader": "0.7.1",
-        "jquery": "3.2.1",
-        "knockout": "3.4.2",
-        "less": "2.7.2",
-        "materialize-css": "0.98.2",
-        "node-sass": "4.5.2",
-        "perfect-scrollbar": "0.6.16",
-        "resolve-url-loader": "2.0.2",
-        "sass-loader": "6.0.3",
-        "source-map-loader": "0.2.1",
-        "style-loader": "0.16.1",
-        "url-loader": "0.5.8",
-        "webpack": "2.3.2",
-        "webpack-target-electron-renderer": "0.4.0"
-    },
-    "dependencies": {
-        "bluebird": "3.5.0",
-        "lodash": "^4.17.4",
-        "material-design-icons-iconfont": "3.0.3",
-        "nedb": "1.8.0",
-        "recursive-readdir": "^2.1.1",
-        "roboto-fontface": "0.7.0",
-        "sharp": "0.17.3",
-        "threads": "0.7.2",
-        "yauzl": "2.8.0"
+  "name": "baijiMangaViewer",
+  "version": "0.1.0",
+  "description": "A modern manga viewer inspired by Quivi that uses Material Design",
+  "scripts": {
+    "start": "electron ./app/",
+    "build-renderer": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.js  --progress --profile --colors --watch",
+    "build-main": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.main.prod.js  --progress --profile --colors",
+    "postinstall": "install-app-deps",
+    "pack": "build --dir",
+    "dist": "build",
+    "build-win32": "build --win --ia32",
+    "build-win64": "build --win --x64"
+  },
+  "repository": "https://github.com/shizkun/manga-viewer",
+  "keywords": [
+    "Manga Viewer",
+    "quick",
+    "Baiji"
+  ],
+  "build": {
+    "appId": "com.baiji-manga-viewer",    
+    "copyright": "Copyright © 2017 Jasser Mark Arioste",
+    "win": {        
+        
     }
+  },
+  "author": "Jasser Mark Arioste",
+  "license": "GPL-3.0",
+  "devDependencies": {
+    "babel-core": "6.24.0",
+    "babel-loader": "6.4.1",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-dynamic-import-webpack": "1.0.1",
+    "babel-preset-env": "1.3.2",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-register": "6.24.1",
+    "css-loader": "0.28.0",
+    "electron": "1.6.7",
+    "electron-builder": "17.3.1",
+    "electron-rebuild": "1.5.7",
+    "extract-zip": "=1.6.0",
+    "file-loader": "0.11.1",
+    "html-loader": "0.4.5",
+    "imports-loader": "0.7.1",
+    "resolve-url-loader": "2.0.2",
+    "sass-loader": "6.0.3",
+    "source-map-loader": "0.2.1",
+    "style-loader": "0.16.1",
+    "url-loader": "0.5.8",
+    "webpack": "2.3.2",
+    "webpack-target-electron-renderer": "0.4.0"
+  }
 }
