--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "url-loader": "0.5.8",
     "webpack": "2.3.2",
     "webpack-target-electron-renderer": "0.4.0",
-    "node-sass": "4.5.2"
+    "node-sass": "4.5.2",
+    "less": "2.7.2"
   }
 }
