--- a/app/package.json
+++ b/app/package.json
@@ -1,23 +1,25 @@
 {
-    "name": "BaijiMangaViewer",
-    "version": "1.0.0",
-    "description": "A modern manga viewer inspired by Quivi that uses Material Design",
-    "main": "./main.js",
-    "author": "Jasser Mark Arioste",
-    "license": "GPL-3.0",
-    "dependencies": {
-        "jquery": "3.2.1",
-        "knockout": "3.4.2",        
-        "materialize-css": "0.98.2",        
-        "perfect-scrollbar": "0.6.16",
-        "adm-zip": "0.4.7",
-        "bluebird": "3.5.0",
-        "lodash": "^4.17.4",
-        "material-design-icons-iconfont": "3.0.3",
-        "nedb": "1.8.0",
-        "recursive-readdir": "^2.1.1",
-        "sharp": "0.17.3",
-        "threads": "0.7.2",
-        "yauzl": "2.8.0"
-    }
+  "name": "BaijiMangaViewer",
+  "version": "1.0.0",
+  "description": "A modern manga viewer inspired by Quivi that uses Material Design",
+  "main": "./main.js",
+  "author": "Jasser Mark Arioste",
+  "license": "GPL-3.0",
+  "dependencies": {
+    "adm-zip": "0.4.7",
+    "bluebird": "3.5.0",
+    "jquery": "3.2.1",
+    "knockout": "3.4.2",
+    "lodash": "^4.17.4",
+    "material-design-icons-iconfont": "3.0.3",
+    "materialize-css": "0.98.2",
+    "nedb": "1.8.0",
+    "perfect-scrollbar": "0.6.16",
+    "rarfile": "0.2.3-1",
+    "recursive-readdir": "^2.1.1",
+    "sharp": "0.17.3",
+    "threads": "0.7.2",
+    "unrar": "0.1.7",
+    "yauzl": "2.8.0"
+  }
 }
