--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,16 @@ os:
   - linux
   - osx
 
+
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+
 git:
   depth: 5
 
