--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,15 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
+      - gcc-4.8
       - g++-4.8
 
 git:
   depth: 5
 
+before_install:
 install:
+  - npm install -g node-gyp
   - npm install
 script: 
   - npm test
