--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ os:
   - linux
   - osx
 
+env:
+  - CXX=g++-4.8
+
 addons:
   apt:
     sources:
@@ -17,8 +20,9 @@ matrix:
   include:
     - os: osx
       env: CXX=clang
-    - os: linux
-      evn: CXX=g++-4.8
+  exclude:
+    - os: osx
+      env: CXX=g++-4.8
 
 git:
   depth: 5
