--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,12 +9,10 @@ install:
   - ps: Install-Product node $env:nodejs_version x64
   # install modules
   - npm install -g node-gyp
-  - npm config set msvs_version 2015
-  - node-gyp --python C:\Python27
+  - npm config set python C:\Python27
+  - node-gyp configure --msvs_version=2015
   - npm install
 
-platform: 
-  - x64
 
 # Post-install test scripts.
 test_script:
