Implement live reload

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "A modern manga viewer inspired by Quivi that uses Material Design",
   "scripts": {
-    "start": "electron ./app/",
+    "start": "gulp start",
     "build-renderer": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.js  --progress --profile --colors --watch",
     "build-main": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.main.prod.js  --progress --profile --colors",
     "postinstall": "install-app-deps",
@@ -52,9 +52,11 @@
     "css-loader": "0.28.0",
     "electron": "1.6.7",
     "electron-builder": "17.3.1",
+    "electron-connect": "0.6.1",
     "electron-rebuild": "1.5.7",
     "extract-zip": "=1.6.0",
     "file-loader": "0.11.1",
+    "gulp": "3.9.1",
     "html-loader": "0.4.5",
     "imports-loader": "0.7.1",
     "less": "2.7.2",
