--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "rarfile": "0.2.3-1",
     "recursive-readdir": "^2.1.1",
     "sharp": "0.17.3",
+    "stream-to-array": "^2.3.0",
     "threads": "0.7.2",
     "yauzl": "2.8.0"
   }
