--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "adm-zip": "0.4.7",
     "bluebird": "3.5.0",
+    "electron-log": "2.2.6",
     "electron-remote": "1.1.2",
     "jquery": "3.2.1",
     "knockout": "3.4.2",
