--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "bluebird": "3.5.0",
     "electron-log": "2.2.6",
     "electron-remote": "1.1.2",
+    "file-saver": "1.3.3",
     "image-clipper": "^0.4.3",
     "jquery": "3.2.1",
     "knockout": "3.4.2",
@@ -18,9 +19,10 @@
     "materialize-css": "0.98.2",
     "nedb": "1.8.0",
     "perfect-scrollbar": "0.6.16",
+    "pica": "3.0.4",
     "rarfile": "0.2.3-1",
     "recursive-readdir": "^2.1.1",
-    "sharp": "0.17.3",
+    "stream": "0.0.2",
     "stream-to-array": "^2.3.0",
     "threads": "0.7.2",
     "yauzl": "2.8.0"
