--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BaijiMangaViewer",
-  "version": "0.1.0",
+  "version": "0.2.3",
   "description": "A modern manga viewer inspired by Quivi that uses Material Design",
   "main": "./main.js",
   "author": "Jasser Mark Arioste",
@@ -10,6 +10,7 @@
     "bluebird": "3.5.0",
     "electron-log": "2.2.6",
     "electron-remote": "1.1.2",
+    "electron-updater": "1.15.0",
     "file-saver": "1.3.3",
     "image-clipper": "^0.4.3",
     "jquery": "3.2.1",
