--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "baijiMangaViewer",
-  "version": "0.1.0",
-  "description": "A modern manga viewer inspired by Quivi that uses Material Design",
   "scripts": {
     "start": "electron ./app",
     "build-renderer": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.js  --progress --profile --colors --watch",
@@ -9,10 +6,12 @@
     "postinstall": "install-app-deps",
     "pack": "build --dir",
     "dist": "build",
+    "build-all": "build --win --x64 --ia32",
     "build-win32": "build --win --ia32",
     "build-win64": "build --win --x64",
     "test": "./node_modules/.bin/_mocha ./app/**/*.spec.js --recursive",
-    "test-dev": "./node_modules/.bin/_mocha ./app/**/*.spec.js --recursive --watch"
+    "test-dev": "./node_modules/.bin/_mocha ./app/**/*.spec.js --recursive --watch",
+    "publish": "build --win --x64 -p onTag"
   },
   "repository": "https://github.com/shizkun/manga-viewer",
   "keywords": [
@@ -24,6 +23,13 @@
     "appId": "com.baiji-manga-viewer",
     "copyright": "Copyright © 2017 Jasser Mark Arioste",
     "asar": false,
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "shizkun",
+        "repo": "baiji-manga-viewer"
+      }
+    ],
     "fileAssociations": [
       {
         "ext": [
@@ -35,8 +41,12 @@
         "icon": "./build/icon.ico"
       }
     ],
-    "win": {
-      "target": "nsis"
+    "mac": {
+      "category": "your.app.category.type",
+      "target": [
+        "zip",
+        "dmg"
+      ]
     },
     "nsis": {
       "oneClick": false,
@@ -70,6 +80,7 @@
     "file-loader": "0.11.1",
     "gulp": "3.9.1",
     "html-loader": "0.4.5",
+    "http-server": "0.10.0",
     "imports-loader": "0.7.1",
     "less": "2.7.2",
     "mocha": "^3.3.0",
