--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
       {
         "provider": "github",
         "owner": "shizkun",
-        "repo": "baiji-manga-viewer"
+        "repo": "manga-viewer"
       }
     ],
     "fileAssociations": [
