--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "pica": "3.0.4",
     "rarfile": "0.2.3-1",
     "recursive-readdir": "^2.1.1",
+    "sharp": "0.17.3",
     "stream": "0.0.2",
     "stream-to-array": "^2.3.0",
     "threads": "0.7.2",
