implementation for TG-130 #in-progress

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build-all": "build --win --x64 --ia32",
     "build-win32": "build --win --ia32",
     "build-win64": "build --win --x64",
-    "test": "./node_modules/.bin/_mocha ./app/**/*.spec.js --recursive",
-    "test-dev": "./node_modules/.bin/_mocha ./app/**/*.spec.js --recursive --watch",
+    "test": ".mocha ./app/**/*.spec.js --recursive",
+    "test-dev": "mocha ./app/**/*.spec.js --recursive --watch",
+    "e2e": "cross-env NODE_ENV=test ./node_modules/.bin/mocha e2e",
     "publish": "build --win --x64 -p always"
   },
   "repository": "https://github.com/shizkun/manga-viewer",
@@ -64,6 +65,8 @@
     "babel-preset-stage-0": "6.24.1",
     "babel-register": "6.24.1",
     "chai": "^3.5.0",
+    "chai-as-promised": "6.0.0",
+    "cross-env": "5.0.0",
     "css-loader": "0.28.0",
     "electron": "1.6.7",
     "electron-builder": "17.3.1",
@@ -83,6 +86,7 @@
     "sinon": "^2.2.0",
     "sinon-chai": "^2.10.0",
     "source-map-loader": "0.2.1",
+    "spectron": "3.6.4",
     "style-loader": "0.16.1",
     "url-loader": "0.5.8",
     "webpack": "2.3.2",
