--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "electron ./app",
     "build-renderer": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.js  --progress --profile --colors --watch",
-    "build-renderer-prod": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.js  --progress",
+    "build-renderer-prod": "node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.js",
     "postinstall": "install-app-deps",
     "pack": "build .",
     "dist": "build --publish onTagOrDraft",
