--- a/.travis.yml
+++ b/.travis.yml
@@ -32,14 +32,8 @@ install:
   - npm install -g node-gyp
   - npm install
 
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
   
-script: 
-  - npm test
-  - npm run e2e
+script: ./travis-build.sh
   
 branches:
   only:
