try cache dependencies

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,8 +7,9 @@ environment:
 skip_tags: true
 
 cache:
-  - node_modules -> package.json
-
+  - node_modules -> **\package.json
+  - .\app\node_modules -> .\app\package.json
+  - '%APPDATA%\npm-cache'
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
