--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,10 @@ matrix:
 git:
   depth: 5
 
+cache:
+  directories:
+    - node_modules
+    - app/node_modules
 
 install:
   - npm install -g node-gyp
