Fix linux icons

--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
       "target": [
         "AppImage",
         "deb"
-      ]
+      ],
+      "icon": "./icons/"
     },
     "mac": {
       "category": "public.app-category.entertainment",
