Add back feature to previous screen state

--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "chai-as-promised": "6.0.0",
     "cross-env": "5.0.0",
     "css-loader": "0.28.0",
-    "electron": "1.6.7",
+    "electron": "1.8.2-beta5",
     "electron-builder": "latest",
     "electron-connect": "0.6.1",
     "electron-rebuild": "1.5.7",
@@ -115,10 +115,10 @@
     "imports-loader": "0.7.1",
     "less": "2.7.2",
     "mocha": "^3.3.0",
-    "node-sass": "4.5.2",
+    "node-sass": "^4.5.2",
     "resolve-url-loader": "2.0.2",
     "rimraf": "2.6.1",
-    "sass-loader": "6.0.3",
+    "sass-loader": "^6.0.3",
     "sinon": "^2.2.0",
     "sinon-chai": "^2.10.0",
     "source-map-loader": "0.2.1",
