--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "electron-builder": "latest",
     "electron-connect": "0.6.1",
     "electron-rebuild": "1.5.7",
+    "electron-updater": "2.21.8",
     "extract-zip": "=1.6.0",
     "file-loader": "0.11.1",
     "gulp": "3.9.1",
