--- a/.travis.yml
+++ b/.travis.yml
@@ -30,13 +30,14 @@ git:
   depth: 5
 
 cache:
+  yarn: true
   directories:
     - node_modules
     - app/node_modules
 
 install:
-  - npm install -g node-gyp
-  - npm install
+  - yarn install -g node-gyp
+  - yarn install
   - chmod a+x ./travis-build.sh
 
   
