--- a/.travis.yml
+++ b/.travis.yml
@@ -30,14 +30,13 @@ git:
   depth: 5
 
 cache:
-  yarn: true
   directories:
     - node_modules
     - app/node_modules
 
 install:
-  - yarn install -g node-gyp
-  - yarn install
+  - npm -g install  node-gyp
+  - npm install
   - chmod a+x ./travis-build.sh
 
   
