--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "electron": "1.8.6",
     "electron-builder": "latest",
     "electron-connect": "0.6.1",
-    "electron-rebuild": "1.5.7",
+    "electron-rebuild": "^1.7.3",
     "extract-zip": "=1.6.0",
     "file-loader": "0.11.1",
     "gulp": "3.9.1",
