--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BaijiMangaViewer",
+  "name": "baiji-manga-viewer",
   "version": "1.1.0",
   "description": "A modern manga viewer inspired by Quivi that uses Material Design",
   "main": "./main.js",
