--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "nedb": "1.8.0",
     "perfect-scrollbar": "0.6.16",
     "pica": "3.0.4",
+    "rarfile": "0.2.3-1",
     "recursive-readdir": "^2.1.1",
     "sharp": "0.17.3",
     "stream": "0.0.2",
