--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "build": {
     "appId": "com.baiji-manga-viewer",
     "copyright": "Copyright © 2017 Jasser Mark Arioste",
-    "asar": false,
+    "asar": true,
     "files": [
       "bundle/",
       "node_modules/",
@@ -32,8 +32,7 @@
       "main.js",
       "index.html",
       "package.json",
-      "icon.png",
-      "UnRAR.exe"
+      "icon.png"
     ],
     "fileAssociations": [
       {
