--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "linux": {
       "asarUnpack": ["node_modules/"],
       "category": "Graphics",
+      "asar": false,
       "target": [
         "AppImage",
         "deb"
