--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "build": {
     "appId": "com.baiji-manga-viewer",
+    "productName": "Baiji Manga Viewer",
     "copyright": "Copyright © 2017 Jasser Mark Arioste",
     "asar": true,
     "files": [
