Unpack node_modules from asar

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "productName": "Baiji Manga Viewer",
     "copyright": "Copyright © 2017 Jasser Mark Arioste",
     "asar": true,
+    "asarUnpack": ["node_modules/"],
     "files": [
       "bundle/",
       "node_modules/",
