--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,8 @@
 {
   "presets": [
-    ["env", {
-      "targets": { "node": 6 },
-      "useBuiltIns": true
-    }]
+    "env"
   ],
-  "plugins": ["add-module-exports", "dynamic-import-webpack"]
+  "plugins": [
+    "transform-class-properties"
+  ]
 }
