--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,10 @@ cache:
 install:
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version x64
+  - ps: Invoke-WebRequest http://www.rarlab.com/rar/unrarw32.exe -OutFile .\app\unrarw32.exe
+  #extract unrar
+  - ps: .\app\unrarw32.exe -s -d
+  - ps: dir
   # install modules
   - npm install -g node-gyp
   - npm config set python C:\Python27
