--- a/package.json
+++ b/package.json
@@ -77,16 +77,29 @@
       ]
     },
     "win": {
-      "target": "nsis"
+      "target": "nsis",
+      "asarUnpack": [
+        "UnRAR.exe"
+      ],
+      "files": [
+        "bundle/",
+        "node_modules/",
+        "main-process/",
+        "common/",
+        "main.js",
+        "index.html",
+        "package.json",
+        "icon.png",
+        "UnRAR.exe"
+      ]
     },
     "nsis": {
       "oneClick": false,
       "perMachine": true,
       "allowElevation": true,
       "allowToChangeInstallationDirectory": true,
-      "runAfterFinish": false,
-      "installerIcon": "build/icon.ico",
-      "installerHeader": "build/installerHeader.png",
+      "runAfterFinish": true,
+      "installerIcon": "./build/icon.ico",
       "license": "LICENSE.md",
       "deleteAppDataOnUninstall": true
     }
