--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,3 +36,6 @@ test_script:
   # - npm run e2e
   - npm run build-renderer-prod 
   - npm run dist
+
+on_success:
+  - ps: Invoke-RestMethod -Method GET -Uri https://api.github.com/repos/jmarioste/manga-viewer/releases/latest?auth_token={GH_TOKEN} -ContentType "json" -OutFile ./docs/scripts/metadata.json
