--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "postinstall": "electron-builder install-app-deps",
     "pack": "electron-builder .",
     "dist": "electron-builder",
-    "build-all": "electron-builder --win --x64 --ia32 --mac --linux",
-    "build-win32": "electron-builder --win --ia32",
-    "build-win64": "electron-builder --win --x64",
     "test": "mocha ./app/**/*.spec.js --recursive",
     "test-dev": "mocha ./app/**/*.spec.js --recursive --watch",
     "e2e": "npm run build-renderer-prod  && mocha e2e",
-    "publish": "electron-builder --win --x64 -p always"
+    "publish": "electron-builder --win --x64 -p always",
+    "dev-docs": "webpack-dev-server --config webpack.config.docs.js",
+    "docs": "webpack --config webpack.config.docs.js",
+    "deploy-docs": "gulp deploy"
   },
   "repository": "https://github.com/jmarioste/manga-viewer",
   "keywords": [
@@ -112,23 +112,31 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.3.2",
     "babel-register": "^6.26.0",
+    "bootstrap": "4.1.1",
     "chai": "^3.5.0",
     "chai-as-promised": "6.0.0",
+    "copy-webpack-plugin": "4.5.1",
     "cross-env": "5.0.0",
     "css-loader": "0.28.0",
     "electron": "1.8.6",
     "electron-builder": "latest",
     "electron-connect": "0.6.1",
     "electron-rebuild": "^1.7.3",
+    "expose-loader": "0.7.5",
     "extract-zip": "=1.6.0",
-    "file-loader": "0.11.1",
+    "file-loader": "1.1.11",
     "gulp": "3.9.1",
+    "gulp-gh-pages": "0.5.4",
     "html-loader": "0.4.5",
     "http-server": "0.10.0",
     "imports-loader": "0.7.1",
+    "jquery": "3.3.1",
+    "knockout": "3.4.2",
     "less": "2.7.2",
+    "magnific-popup": "1.1.0",
     "mocha": "^3.3.0",
     "node-sass": "^4.5.2",
+    "popper.js": "1.14.3",
     "resolve-url-loader": "2.0.2",
     "rimraf": "2.6.1",
     "sass-loader": "^6.0.3",
@@ -139,7 +147,9 @@
     "style-loader": "0.16.1",
     "uglifyjs-webpack-plugin": "^0.4.3",
     "url-loader": "0.5.8",
-    "webpack": "2.3.2",
+    "webpack": "^4.6.0",
+    "webpack-cli": "2.1.2",
+    "webpack-dev-server": "3.1.4",
     "webpack-target-electron-renderer": "0.4.0"
   }
 }
